--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <div class="imgbx">
         <input type="checkbox">
+        <span class="beach"></span>
+        <span class="desert"></span>
     </div>
     
 </body>
