--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <input type="checkbox">
         <span class="beach"></span>
         <span class="desert"></span>
+        <div class="bg"></div>
     </div>
     
 </body>
